--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div class="container">
 	<header>
-		<h1>Smilio Action Simulator</h1>
+		<h1>Smilio Action Integrator Tools</h1>
 		</header>
 	<div class="row">
 	<div class="col-sm-12">
