--- a/configurator.html
+++ b/configurator.html
@@ -83,8 +83,8 @@
 <div class="form-group">
   <label class="control-label" for="eat">EAT</label>
     <select id="eat" name="eat" class="form-control">
-      <option value="0" selected="selected">Immediate send</option>
-      <option value="1">Periodic send</option>
+      <option value="0" selected="selected">Periodic send</option>
+      <option value="1">Immediate send</option>
       <option value="2">Both</option>
     </select>
 </div>
