--- a/configurator.html
+++ b/configurator.html
@@ -149,8 +149,8 @@
 <!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="tpb">TPB</label>  
-  <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="1" max="60" required="">
-  <span class="help-block">Minimum time between 2 pushes, in seconds, max = 60</span>  
+  <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="3" max="60" required="">
+  <span class="help-block">Minimum time between 2 pushes, in seconds, min = 3 max = 60 (not used in code mode)</span>  
 </div>
 
 <!-- Text input-->
