--- a/index.html
+++ b/index.html
@@ -62,9 +62,21 @@
 		<h1>Smilio Action Integrator Tools</h1>
 		</header>
 	<div class="row">
-	<div class="col-sm-12">
+			<div class="col-sm-12" style="margin-bottom:15px;">
+		Welcome to the Smilio Integrator Tools. Smilio Action is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN.
+		<br />
+		<br />
+		<img class="img-responsive" alt="Connected Buttons Smilio Action" src="./img/smilio-action.jpg" />
+	</div>
+</div>
+<div class="row" style="margin-bottom:15px;">
+	<div class="col-sm-6">
     The Simulator will help you to prepare your apps, even without having a Smilio Action Button in your hands.<br /><br />
-    The Configurator will help you to setup your Smilio Action with the correct Downlink for your App.
+    <a href="/simulator.html"><button type="button" class="btn btn-primary">Use the simulator</button></a>
+</div>
+    	<div class="col-sm-6">
+    The Configurator will help you to setup your Smilio Action with the correct Downlink for your App.<br /><br />
+    <a href="/configurator.html"><button type="button" class="btn btn-primary">Use the configurator</button></a>
   </div>
 </div>
 </div>
