--- a/configurator.html
+++ b/configurator.html
@@ -161,10 +161,10 @@
       <option value="02">One push per button during TPB</option>
       <option value="03">Special Mode "03"</option>
       <option value="04">Special Mode "04"</option>
-      <option value="08">Pulse Mode</option>
+      <option value="08">Pulse Mode (not recommended for production)</option>
       <option value="09">Code Mode</option>
   </select>
-  <span class="help-block">Running Mode (see documentation for special modes)</span>  
+  <span class="help-block">Running Mode (see documentation for special modes). <b>Pulse Mode is not recommended for production</b> (potential data loss in case of missed radio frame).</span>  
 </div>
 
 <!-- Text input-->
