--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 	</div>
 </div>
 <div class="row" style="margin-bottom:15px;">
-	<div class="col-sm-6">
+	<div class="col-sm-6" style="margin-bottom:15px;">
     The Simulator will help you to prepare your apps, even without having a Smilio Action Button in your hands.<br /><br />
     <a href="/simulator.html"><button type="button" class="btn btn-primary">Use the simulator</button></a>
 </div>
-    	<div class="col-sm-6">
+    	<div class="col-sm-6" style="margin-bottom:15px;">
     The Configurator will help you to setup your Smilio Action with the correct Downlink for your App.<br /><br />
     <a href="/configurator.html"><button type="button" class="btn btn-primary">Use the configurator</button></a>
   </div>
