--- a/configurator.html
+++ b/configurator.html
@@ -8,13 +8,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="js/formcalculations.js"></script>
@@ -26,7 +23,6 @@
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -39,7 +35,6 @@
       </a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="./simulator.html">Simulator</a></li>
@@ -56,21 +51,23 @@
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 <div class="container">
     <div class="row">
     <header>
   <h1>Smilio Action configurator (FW &gt; 2.0.0)</h1>
+      <div class="row">
+      <div class="col-sm-12" style="margin-bottom: 15px;">
+        This configurator aims to help IoT integrators to configure Smilio Action by them selves. WARNING: misconfiguration can lead to unexpected behaviors, abnormal energy or data consumption, or even network rejection. DO NOT USE IN PRODUCTION IF YOU ARE NOT FAMILIAR WITH LORAWAN TECHNOLOGY.
+      </div>
 </header>
 
 <form id="smilioParameters" onsubmit="return false;">
   <div class="col-sm-6">
-<!-- Form Name -->
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="csc">CSC</label>
     <select id="csc" name="csc" class="form-control">
@@ -79,7 +76,6 @@
     </select>
 </div>
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="eat">EAT</label>
     <select id="eat" name="eat" class="form-control">
@@ -89,7 +85,6 @@
     </select>
 </div>
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="dutycyce">Duty Cycle</label>
     <select id="dutycycle" name="dutycyce" class="form-control">
@@ -98,7 +93,6 @@
     </select>
 </div>
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="backoff">LoRaWAN backoff</label>
     <select id="backoff" name="backoff" class="form-control">
@@ -107,7 +101,6 @@
     </select>
 </div>
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="piggyback">LoRaWAN piggyback</label>
     <select id="piggyback" name="piggyback" class="form-control">
@@ -116,7 +109,6 @@
     </select>
 </div>
 
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="ADR">LoRaWAN ADR</label>
     <select id="ADR" name="ADR" class="form-control">
@@ -125,8 +117,6 @@
     </select>
 </div>
 
-
-<!-- Select Basic -->
 <div class="form-group">
   <label class="control-label" for="forceDR0">LoRaWAN Force DR0 at join</label>
     <select id="forceDR0" name="forceDR0" class="form-control">
@@ -139,21 +129,18 @@
 
 <div class="col-sm-6">
 
-<!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="dtx">DTX</label>  
   <input id="dtx" name="dtx" type="number" value="30" class="form-control input-md" min="1" max="1440" required="">
   <span class="help-block">Time between 2 periods in minutes, max = 1440</span>  
 </div>
 
-<!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="tpb">TPB</label>  
   <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="3" max="60" required="">
   <span class="help-block">Minimum time between 2 pushes, in seconds, min = 3 max = 60 (not used in code mode)</span>  
 </div>
 
-<!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="rnm">RNM</label>  
   <select id="rnm" name="rnm" class="form-control">
@@ -167,14 +154,12 @@
   <span class="help-block">Running Mode (see documentation for special modes). <b>Pulse Mode is not recommended for production</b> (potential data loss in case of missed radio frame).</span>  
 </div>
 
-<!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="lwf">LWF</label>  
   <input id="lwf" name="lwf" type="text" value="00" class="form-control input-md" required="" pattern="([A-F]|[0-9])([A-F]|[0-9])">
   <span class="help-block">LoRaWAN Special Mode, 00 to FF (hexadecimal)</span>  
 </div>
 
-<!-- Text input-->
 <div class="form-group">
   <label class="control-label" for="tpbq">TPBQ</label>  
   <input id="tpbq" name="tpbq" type="number" value="5" min="1" max="60" class="form-control input-md" required="">
