--- a/simulator.html
+++ b/simulator.html
@@ -8,26 +8,21 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="js/simulator.js"></script>
 
 <link rel="stylesheet" href="css/simulator.css">
 
-<!-- Latest compiled and minified JavaScript -->
 </head>
 <body onload="initPage()">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -40,7 +35,6 @@
     	</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class='active'><a href="./simulator.html">Simulator <span class="sr-only">(current)</span></a></li>
@@ -53,17 +47,21 @@
             <li><a href="https://faq.skiply.eu">FAQ</a></li>
             <li><a href="https://www.youtube.com/channel/UCw1MuxiRPWJuWKNCWjPQp_w">Videos</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="https://boutique.smilio.fr">How to buy ?</a></li>
+            <li><a href="https://boutique.smilio.fr">How to buy?</a></li>
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 <div class="container">
 	<header>
 		<h1>Smilio Action Simulator</h1>
+		<div class="row">
+			<div class="col-sm-12" style="margin-bottom: 15px;">
+				This simulator aims to show the internal working of Smilio Action. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.
+			</div>
 		</header>
 	<div class="row">
 	<div class="col-sm-6">
@@ -127,10 +125,6 @@
   	
 	<form id="smilioParameters" onsubmit="return false;">
 		<fieldset>
-
-		<!-- Form Name -->
-
-		<!-- Select Basic -->
 		<h2>Running Mode</h2>
 		<div class="form-group">
 		  <label></label>  
