--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</header>
 	<div class="row">
 			<div class="col-sm-12" style="margin-bottom:15px;">
-		Welcome to the Smilio Integrator Tools. Smilio Action is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN.
+		Welcome to the Smilio Integrator Tools. Smilio Action is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN (dual mode).
 		<br />
 		<br />
 		<img class="img-responsive" alt="Connected Buttons Smilio Action" src="./img/smilio-action.jpg" />
