--- a/configurator.html
+++ b/configurator.html
@@ -61,7 +61,7 @@
   <h1>Smilio Action configurator (FW &gt; 2.0.0)</h1>
       <div class="row">
       <div class="col-sm-12" style="margin-bottom: 15px;">
-        This configurator aims to help IoT integrators to configure Smilio Action by them selves. WARNING: misconfiguration can lead to unexpected behaviors, abnormal energy or data consumption, or even network rejection. DO NOT USE IN PRODUCTION IF YOU ARE NOT FAMILIAR WITH LORAWAN TECHNOLOGY.
+        This configurator aims to help IoT integrators to configure Smilio Action by them selves. WARNING: misconfiguration can lead to unexpected behaviors, abnormal energy or data consumption, or even network rejection. DO NOT USE IN PRODUCTION IF YOU ARE NOT FAMILIAR WITH LORAWAN TECHNOLOGY. LoRaWAN parameters are ignored for Sigfox use.
       </div>
 </header>
 
