--- a/simulator.html
+++ b/simulator.html
@@ -131,7 +131,7 @@
 		  <select id="rnm" name="rnm" class="form-control" onchange="selectMode()">
 		      <option value="01" selected="selected">Normal</option>
 		      <option value="02">Code</option>
-		      <option value="03">Pulse</option>
+		      <option value="03">Pulse (not recommended for production)</option>
 		  </select>
 		  <span class="help-block">Running Mode (see documentation for special modes)</span>  
 		</div>
