--- a/configurator.html
+++ b/configurator.html
@@ -61,7 +61,7 @@
   <h1>Smilio Action configurator (FW &gt; 2.0.1)</h1>
       <div class="row">
       <div class="col-sm-12" style="margin-bottom: 15px;">
-        This configurator aims to help IoT integrators to configure Smilio Action by them selves. WARNING: misconfiguration can lead to unexpected behaviors, abnormal energy or data consumption, or even network rejection. DO NOT USE IN PRODUCTION IF YOU ARE NOT FAMILIAR WITH LORAWAN TECHNOLOGY. LoRaWAN parameters are ignored for Sigfox use.
+        This configurator aims to help IoT integrators to configure Smilio Action by them selves. WARNING: misconfiguration can lead to unexpected behaviors, abnormal energy or data consumption, or even network rejection. DO NOT USE IN PRODUCTION IF YOU ARE NOT FAMILIAR WITH LORAWAN TECHNOLOGY. LoRaWAN parameters are ignored for Sigfox use. <br /><br />Downlink command MUST be done on Port 2. Sending data to port 1 or 0 could potentially lead to serious malfunctions. Using Skiply API is recommended to avoid any trouble.
       </div>
 </header>
 
