--- a/simulatorS.html
+++ b/simulatorS.html
@@ -66,7 +66,7 @@
 	<div class="row">
 	<div class="col-sm-6">
 <div class="svg-container">
-		<svg version="1.1" viewBox="0 0 493.2 238.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg version="1.1" viewBox="0 0 493.2 238.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <style type="text/css">
 	.st0{clip-path:url(#SVGID_2_);}
 	.st1{clip-path:url(#SVGID_4_);fill:#49B0E6;}
@@ -185,21 +185,21 @@
 				<path class="st11" d="m130.7 258.5 1.5-7.8h.9l-1.5 7.8z"/>
 			</g>
 	</g>
-<g transform="translate(-36.9 -36.9)">
+<g id="button4" transform="translate(-36.9 -36.9)" onclick="buttonpressed(4)" onmouseover="buttonover(4)" onmouseout="buttonout(4)" cursor="pointer">
 						<path class="st7" d="m337.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="button1" transform="translate(-36.9 -36.9)" onclick="buttonpressed(1)" onmouseover="buttonover(1)" onmouseout="buttonout(1)" cursor="pointer">
 						<path class="st4" d="m82.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="button5" transform="translate(-36.9 -36.9)" onclick="buttonpressed(5)" onmouseover="buttonover(5)" onmouseout="buttonout(5)" cursor="pointer">
 							<path class="st8" d="m422.4 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="button2" transform="translate(-36.9 -36.9)" onclick="buttonpressed(2)" onmouseover="buttonover(2)" onmouseout="buttonout(2)" cursor="pointer">
 						<path class="st9" d="m167.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="led2" transform="translate(-36.9 -36.9)">
 						<path class="st10" d="m280.6 101.3c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="led3" transform="translate(-36.9 -36.9)">
 						<path class="st10" d="m301.9 101.3c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="led1" transform="translate(-36.9 -36.9)">
 						<path class="st10" d="m259.4 101.3c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g transform="translate(-36.9 -36.9)">
+					</g><g id="button3" transform="translate(-36.9 -36.9)" onclick="buttonpressed(3)" onmouseover="buttonover(3)" onmouseout="buttonout(3)" cursor="pointer">
 				<path class="st12" d="m252.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800"/>
 			</g>
 <g class="st19" transform="translate(0 -73.7)" display="none">
@@ -1154,6 +1154,32 @@
 		</g>
 	</g>
 </g>
+</svg>
+
+	</div>
+		<div class="svg-badge" id="div-badge">
+		<svg id="svg9" preserveAspectRatio="xMinYMin meet" viewBox="0 0 70 30" class="svg-content">
+ <metadata id="metadata5">
+  <rdf:RDF>
+   <cc:Work rdf:about="">
+    <dc:format>image/svg+xml</dc:format>
+    <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/>
+    <dc:title/>
+   </cc:Work>
+  </rdf:RDF>
+ </metadata>
+ <g id="badge" transform="translate(-36.326 -29.035)"  onclick="badgepressed()" onmouseover="badgeover()" onmouseout="badgeout()" cursor="pointer">
+  <g id="g875">
+   <g>
+    <path id="badgeshadow" d="m36.661 46.372s1.0844 4.2324 3.8869 5.0034c6.3461 1.7457 15.579 3.1949 17.946 2.7291 1.4171-0.27883 2.8275-0.85806 3.8869-1.8194 1.5422-1.3995 3.1839-5.3755 3.1839-5.3755z" fill="#9bc0d5" stroke="#666" stroke-width=".12107px"/>
+    <path id="badgetop" d="m39.886 38.97c4.149-1.8721 5.9425-2.4267 13.232-4.7139 7.2895-2.2872 12.178 1.8625 13.025 7.3603 0.78162 5.0732-2.1904 11.009-8.973 10.751-6.7825-0.25805-11.016-1.5402-15.093-2.357-4.0768-0.81671-5.7892-2.4328-5.6649-5.665 0.0366-0.9522-0.67563-3.5034 3.4734-5.3755z" fill="#74a7c4" stroke="#4d4d4d" stroke-width=".12107px"/>
+    <ellipse id="path830" cx="39.844" cy="44.18" rx="1.3232" ry="1.2819" fill="#fff" stroke="#4d4d4d" stroke-width=".13178"/>
+   </g>
+   <path id="onde1" d="m52.093 32.26s2.1873-0.93132 4.8055-0.93542c2.9448-0.0046 4.9522 1.0455 4.9522 1.0455" fill="none" stroke="#74a7c4" stroke-width=".36149"/>
+   <path id="onde2" d="m51.05 30.576s1.8522-1.3525 5.9544-1.3439c3.613 0.0076 5.789 1.5506 5.789 1.5506" fill="none" stroke="#74a7c4" stroke-width=".39581"/>
+   <text id="text845" x="44.035179" y="45.158859" fill="#000000" font-family="sans-serif" font-size="5.6083px" letter-spacing="0px" stroke-width=".21031" word-spacing="0px" style="line-height:1.25" xml:space="preserve"><tspan id="tspan843" x="44.035179" y="45.158859" fill="#ffffff" font-family="'Arial Narrow'" font-size="5.6083px" stroke-width=".21031">Badge</tspan></text>
+  </g>
+ </g>
 </svg>
 	</div>
 	</div>
