--- a/simulatorS.html
+++ b/simulatorS.html
@@ -16,7 +16,7 @@
 
 <script type="text/javascript" src="js/simulator.js"></script>
 
-<link rel="stylesheet" href="css/simulator.css">
+<link rel="stylesheet" href="css/simulatorS.css">
 
 </head>
 <body onload="initPage()">
