--- a/simulatorS.html
+++ b/simulatorS.html
@@ -91,7 +91,7 @@
 	.st20{display:inline;}
 	.st21{fill:none;stroke:#E3000F;stroke-width:0.4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 </style>
-<g transform="translate(-36.9 -36.9)">
+<g transform="translate(-36.9,-36.9)">
 					<defs><polygon id="SVGID_3_" points="530.1 275 530.1 36.9 36.9 36.9 36.9 275 416.7 275 504.6 275"/></defs>
 					<clipPath id="SVGID_4_">
 						<use width="100%" height="100%" xlink:href="#SVGID_3_"/>
@@ -153,7 +153,7 @@
 					<path class="st11" d="m62 260.8c-3 0-5.7-1.2-7.8-3.4-2.1-2.1-3.1-5-3.1-7.9.2-6 5-10.7 11-10.7h.3c6 .2 10.8 5.2 10.7 11.1-.1 6-5 10.9-11 10.9zm-2.4-7.8-3.8 3.8v.3l.2.2c.2.1.3.2.5.4.9.7 2 1.1 3.1 1.4.5.1 1.1.2 1.7.3h.9c.9 0 1.8-.1 2.7-.4 1.2-.4 2.3-.9 3.3-1.8.6-.5 1.2-1.1 1.6-1.7.6-.8 1.1-1.7 1.4-2.7.2-.6.4-1.3.5-1.9.2-1.2.1-2.5-.2-3.7-.1-.5-.3-1-.5-1.5-.4-.8-.9-1.6-1.4-2.3l-.1-.1h-.3l-9.2 9.2c-.1.1-.2.2-.2.3zm2.6-12.9c-.5 0-.9 0-1.4.1-.9.1-1.8.4-2.6.8s-1.6.9-2.2 1.4-1.2 1.2-1.7 1.8c-.5.7-.9 1.5-1.2 2.3-.3.9-.5 1.9-.5 2.8 0 .6 0 1.2.1 1.8s.2 1.1.4 1.6c.1.4.3.7.4 1.1.4.8.8 1.5 1.4 2.2l.1.1h.3l8.5-8.5c.1 0 .1-.1.1-.1l4.6-4.6v-.3l-.3-.3c-.1-.1-.3-.2-.4-.3-.5-.4-1.1-.7-1.7-1-.9-.4-1.9-.7-2.9-.8-.4-.1-.7-.1-1-.1z" fill="#fff"/>
 			</g>
 			<g fill="#fff">
-				<path class="st11" d="m58.9 251 .7-.7c-.6-.5-1.1-1.1-1.7-1.6-.8-.8-.8-2.3.1-3s2-.6 2.8.2c.5.5 1.1 1 1.6 1.6l.7-.7c.1-.1.1-.2.2-.2l.4-.4c.1-.1.1-.3 0-.4s-.2-.2-.4-.1c-.1 0-.2.1-.3.2-.2.2-.3.4-.6.5l-1-1 .6-.6c.2-.2.2-.4 0-.6s-.4-.1-.6.1l-.6.6c-.5-.2-.9-.4-1.4-.4v-.9c0-.3-.2-.5-.4-.4-.2 0-.3.2-.3.5v.9c-.5.1-1 .4-1.4.7-.3-.2-.5-.5-.8-.7-.1-.1-.3-.1-.4 0s-.2.3-.1.4c0 .1.1.2.2.2l.6.6c-.3.5-.5 1-.5 1.5h-.4-.7c-.2 0-.3.1-.3.3s.1.3.3.4h.3c.3 0 .7 0 1 .1.1.4.3.7.4 1.1-.2.2-.4.5-.7.7-.1.1-.1.3-.1.4.1.1.2.2.3.2.2 0 .3-.1.4-.2l.6-.6c.5.4.6.5 1 1l-.6.6c-.2.2-.2.4-.1.6.2.2.3.1.5 0l.4-.5c.2-.3.3-.3.3-.4z"/>
+				<path class="st11" d="m58.9 251 .7-.7c-.6-.5-1.1-1.1-1.7-1.6-.8-.8-.8-2.3.1-3s2-.6 2.8.2c.5.5 1.1 1 1.6 1.6l.7-.7c.1-.1.1-.2.2-.2l.4-.4c.1-.1.1-.3 0-.4s-.2-.2-.4-.1c-.1 0-.2.1-.3.2-.2.2-.3.4-.6.5l-1-1 .6-.6c.2-.2.2-.4 0-.6s-.4-.1-.6.1l-.6.6c-.5-.2-.9-.4-1.4-.4v-.9c0-.3-.2-.5-.4-.4-.2 0-.3.2-.3.5v.9c-.5.1-1 .4-1.4.7-.3-.2-.5-.5-.8-.7-.1-.1-.3-.1-.4 0s-.2.3-.1.4c0 .1.1.2.2.2l.6.6c-.3.5-.5 1-.5 1.5h-1.1c-.2 0-.3.1-.3.3s.1.3.3.4h.3c.3 0 .7 0 1 .1.1.4.3.7.4 1.1-.2.2-.4.5-.7.7-.1.1-.1.3-.1.4.1.1.2.2.3.2.2 0 .3-.1.4-.2l.6-.6c.5.4.6.5 1 1l-.6.6c-.2.2-.2.4-.1.6.2.2.3.1.5 0l.4-.5c.2-.3.3-.3.3-.4z"/>
 				<path class="st11" d="m68.6 251.9h-1c-.1-.4-.2-.7-.4-1.1.3-.3.5-.5.7-.8.1-.1.1-.3 0-.4s-.2-.2-.3-.2-.2.1-.3.2c-.2.2-.3.4-.5.5-.4-.4-.6-.6-1.1-1l.7-.7c.1-.2.1-.3-.1-.5-.1-.1-.3-.1-.5 0-.2.2-.4.5-.7.6l-.6.6.2.2c.4.4.9.8 1.3 1.3.9.8.9 2.2.1 3-.7.8-2 .8-2.8.1-.6-.5-1.2-1.1-1.7-1.7l-1.3 1.3c-.2.2-.1.5.1.6.2 0 .3 0 .4-.1l.6-.6c.4.4.9.8 1.3 1.2-.2.3-.4.5-.6.7-.1.2-.1.3 0 .5s.3.1.5 0c.1 0 .1-.1.2-.2l.6-.6c.3.1.7.2 1.1.3 0 .4.1.8.1 1.1 0 .2.1.3.3.4.3.1.5-.1.5-.4 0-.4 0-.8-.1-1.2.4-.1.8-.3 1.2-.5h.1l.5.5c.3.3.5.3.7.1s.1-.4-.2-.7c-.2-.2-.4-.3-.5-.5.2-.2.3-.5.4-.7.1-.3.1-.6.2-.7.4 0 .7-.1 1-.1s.4-.2.4-.4c-.1 0-.2-.1-.5-.1z"/>
 			</g>
 			<g fill="#fff">
@@ -161,12 +161,12 @@
 				<path class="st11" d="m83.4 244.8v-1.4h.9l.1.9c.3-.5.9-1 1.8-1 .7 0 1.9.4 1.9 2.3v3.2h-1v-3.1c0-.9-.3-1.6-1.2-1.6-.6 0-1.1.5-1.3 1 0 .1-.1.3-.1.5v3.2h-1v-4z"/>
 				<path class="st11" d="m90.6 241.8v1.5h1.4v.7h-1.4v2.9c0 .7.2 1 .7 1 .3 0 .4 0 .6-.1v.7c-.2.1-.5.1-.9.1-.5 0-.8-.1-1-.4-.3-.3-.4-.8-.4-1.4v-2.9h-.8v-.7h.8v-1.3z"/>
 				<path class="st11" d="m94.2 241.8c0 .3-.2.6-.6.6-.3 0-.6-.3-.6-.6s.3-.6.6-.6.6.3.6.6zm-1.1 6.9v-5.3h1v5.3z"/>
-				<path class="st11" d="m95.6 248.7v-1.4-6.4h1v3.3c.3-.6 1-1 1.8-1 1.3 0 2.3 1.1 2.2 2.7 0 1.9-1.2 2.8-2.4 2.8-.8 0-1.4-.3-1.8-1v.9h-.8zm1-2.2v.4c.2.7.7 1.1 1.5 1.1 1 0 1.6-.8 1.6-2 0-1.1-.5-2-1.6-2-.7 0-1.3.5-1.5 1.2 0 .1-.1.2-.1.4v.9z"/>
+				<path class="st11" d="m95.6 248.7v-7.8h1v3.3c.3-.6 1-1 1.8-1 1.3 0 2.3 1.1 2.2 2.7 0 1.9-1.2 2.8-2.4 2.8-.8 0-1.4-.3-1.8-1v.9h-.8zm1-2.2v.4c.2.7.7 1.1 1.5 1.1 1 0 1.6-.8 1.6-2 0-1.1-.5-2-1.6-2-.7 0-1.3.5-1.5 1.2 0 .1-.1.2-.1.4v.9z"/>
 				<path class="st11" d="m104.9 248.7-.1-.7c-.3.4-.9.8-1.6.8-1.1 0-1.6-.8-1.6-1.5 0-1.3 1.1-2 3.2-2v-.1c0-.4-.1-1.2-1.2-1.2-.5 0-1 .2-1.4.4l-.2-.6c.4-.3 1.1-.5 1.7-.5 1.6 0 2 1.1 2 2.2v2c0 .5 0 .9.1 1.3h-.9zm-.2-2.8c-1.1 0-2.3.2-2.3 1.2 0 .6.4.9.9.9.7 0 1.1-.4 1.3-.9 0-.1.1-.2.1-.3z"/>
 				<path class="st11" d="m111 248.5c-.3.1-.8.3-1.5.3-1.6 0-2.7-1.1-2.7-2.7s1.1-2.8 2.9-2.8c.6 0 1.1.1 1.3.3l-.2.7c-.2-.1-.6-.3-1.1-.3-1.2 0-1.9.9-1.9 2 0 1.2.8 2 1.8 2 .5 0 .9-.1 1.2-.3z"/>
 				<path class="st11" d="m113.5 241.8v1.5h1.4v.7h-1.4v2.9c0 .7.2 1 .7 1 .3 0 .4 0 .6-.1v.7c-.2.1-.5.1-.9.1-.5 0-.8-.1-1-.4-.3-.3-.4-.8-.4-1.4v-2.9h-.8v-.7h.8v-1.3z"/>
 				<path class="st11" d="m116.4 246.2c0 1.3.9 1.8 1.8 1.8.7 0 1.1-.1 1.5-.3l.2.7c-.3.2-.9.3-1.8.3-1.6 0-2.6-1.1-2.6-2.7s.9-2.9 2.5-2.9c1.7 0 2.2 1.5 2.2 2.5v.5h-3.8zm2.8-.7c0-.6-.3-1.6-1.3-1.6s-1.4.9-1.5 1.6zm.3-4.5-1.3 1.6h-.7l1-1.6z"/>
-				<path class="st11" d="m121.4 245v-1.7h.8v1c.2-.7.8-1.2 1.5-1.2h.3v.9h-.3c-.7 0-1.2.5-1.3 1.2v.5 2.8h-1z"/>
+				<path class="st11" d="m121.4 245v-1.7h.8v1c.2-.7.8-1.2 1.5-1.2h.3v.9h-.3c-.7 0-1.2.5-1.3 1.2v3.3h-1z"/>
 				<path class="st11" d="m126.1 241.8c0 .3-.2.6-.6.6-.3 0-.6-.3-.6-.6s.3-.6.6-.6c.4 0 .6.3.6.6zm-1.1 6.9v-5.3h1v5.3z"/>
 				<path class="st11" d="m128.1 246.2c0 1.3.9 1.8 1.8 1.8.7 0 1.1-.1 1.5-.3l.2.7c-.3.2-.9.3-1.8.3-1.6 0-2.6-1.1-2.6-2.7s.9-2.9 2.5-2.9c1.7 0 2.2 1.5 2.2 2.5v.5h-3.8zm2.9-.7c0-.6-.3-1.6-1.3-1.6s-1.4.9-1.5 1.6z"/>
 				<path class="st11" d="m133.1 244.8v-1.4h.9l.1.9c.3-.5.9-1 1.8-1 .7 0 1.9.4 1.9 2.3v3.2h-1v-3.1c0-.9-.3-1.6-1.2-1.6-.6 0-1.1.5-1.3 1 0 .1-.1.3-.1.5v3.2h-1v-4z"/>
@@ -185,21 +185,15 @@
 				<path class="st11" d="m130.7 258.5 1.5-7.8h.9l-1.5 7.8z"/>
 			</g>
 	</g>
-<g id="button4" transform="translate(-36.9 -36.9)" onclick="buttonpressed(4)" onmouseover="buttonover(4)" onmouseout="buttonout(4)" cursor="pointer">
+<g id="button4" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)">
 						<path class="st7" d="m337.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119"/>
-					</g><g id="button1" transform="translate(-36.9 -36.9)" onclick="buttonpressed(1)" onmouseover="buttonover(1)" onmouseout="buttonout(1)" cursor="pointer">
+					</g><g id="button1" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(1)" onmouseout="buttonout(1)" onmouseover="buttonover(1)">
 						<path class="st4" d="m82.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8"/>
-					</g><g id="button5" transform="translate(-36.9 -36.9)" onclick="buttonpressed(5)" onmouseover="buttonover(5)" onmouseout="buttonout(5)" cursor="pointer">
+					</g><g id="button5" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(5)" onmouseout="buttonout(5)" onmouseover="buttonover(5)">
 							<path class="st8" d="m422.4 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715"/>
-					</g><g id="button2" transform="translate(-36.9 -36.9)" onclick="buttonpressed(2)" onmouseover="buttonover(2)" onmouseout="buttonout(2)" cursor="pointer">
+					</g><g id="button2" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(2)" onmouseout="buttonout(2)" onmouseover="buttonover(2)">
 						<path class="st9" d="m167.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96"/>
-					</g><g id="led2" transform="translate(-36.9 -36.9)">
-						<path class="st10" d="m280.6 101.3c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g id="led3" transform="translate(-36.9 -36.9)">
-						<path class="st10" d="m301.9 101.3c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g id="led1" transform="translate(-36.9 -36.9)">
-						<path class="st10" d="m259.4 101.3c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/>
-					</g><g id="button3" transform="translate(-36.9 -36.9)" onclick="buttonpressed(3)" onmouseover="buttonover(3)" onmouseout="buttonout(3)" cursor="pointer">
+					</g><path id="led2" class="st10" d="m243.7 64.4c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><path id="led3" class="st10" d="m265 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><path id="led1" class="st10" d="m222.5 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><g id="button3" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(3)" onmouseout="buttonout(3)" onmouseover="buttonover(3)">
 				<path class="st12" d="m252.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800"/>
 			</g>
 <g class="st19" transform="translate(0 -73.7)" display="none">
@@ -1155,6 +1149,7 @@
 	</g>
 </g>
 </svg>
+
 
 	</div>
 		<div class="svg-badge" id="div-badge">
