--- a/simulatorS.html
+++ b/simulatorS.html
@@ -91,7 +91,7 @@
 	.st21{fill:none;stroke:#E3000F;stroke-width:0.4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 </style>
 <g transform="translate(-36.9,-36.9)">
-					<defs><polygon id="SVGID_3_" points="530.1 275 530.1 36.9 36.9 36.9 36.9 275 416.7 275 504.6 275"/></defs>
+					<defs><polygon id="SVGID_3_" points="36.9 36.9 36.9 275 416.7 275 504.6 275 530.1 275 530.1 36.9"/></defs>
 					<clipPath id="SVGID_4_">
 						<use width="100%" height="100%" xlink:href="#SVGID_3_"/>
 					</clipPath>
@@ -184,17 +184,7 @@
 				<path class="st11" d="m130.7 258.5 1.5-7.8h.9l-1.5 7.8z"/>
 			</g>
 	</g>
-<g id="button4" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)">
-						<path class="st7" d="m337.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119"/>
-					</g><g id="button1" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(1)" onmouseout="buttonout(1)" onmouseover="buttonover(1)">
-						<path class="st4" d="m82.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8"/>
-					</g><g id="button5" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(5)" onmouseout="buttonout(5)" onmouseover="buttonover(5)">
-							<path class="st8" d="m422.4 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715"/>
-					</g><g id="button2" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(2)" onmouseout="buttonout(2)" onmouseover="buttonover(2)">
-						<path class="st9" d="m167.2 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96"/>
-					</g><path id="led2" class="st10" d="m243.7 64.4c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><path id="led3" class="st10" d="m265 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><path id="led1" class="st10" d="m222.5 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#6f6d6c"/><g id="button3" transform="translate(-36.9,-36.9)" cursor="pointer" onclick="buttonpressed(3)" onmouseout="buttonout(3)" onmouseover="buttonover(3)">
-				<path class="st12" d="m252.3 155.9c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800"/>
-			</g>
+<path id="button4" class="st7" d="m300.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)"/><path id="button1" class="st4" d="m45.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8" onclick="buttonpressed(1)" onmouseout="buttonout(1)" onmouseover="buttonover(1)"/><path id="button5" class="st8" d="m385.5 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715" onclick="buttonpressed(5)" onmouseout="buttonout(5)" onmouseover="buttonover(5)"/><path id="button2" class="st9" d="m130.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96" onclick="buttonpressed(2)" onmouseout="buttonout(2)" onmouseover="buttonover(2)"/><path id="led2" class="st10" d="m243.7 64.4c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led3" class="st10" d="m265 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led1" class="st10" d="m222.5 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="button3" class="st12" d="m215.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800" onclick="buttonpressed(3)" onmouseout="buttonout(3)" onmouseover="buttonover(3)"/>
 <g class="st19" transform="translate(0 -73.7)" display="none">
 	<g class="st20" display="inline">
 		<g id="CIRCLE_29_">
