--- a/simulatorS.html
+++ b/simulatorS.html
@@ -14,7 +14,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="js/simulator.js"></script>
+<script type="text/javascript" src="js/simulatorS.js"></script>
 
 <link rel="stylesheet" href="css/simulatorS.css">
 
