--- a/simulatorS.html
+++ b/simulatorS.html
@@ -14,7 +14,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="js/simulatorS.js"></script>
+<script type="text/javascript" src="js/simulator.js"></script>
 
 <link rel="stylesheet" href="css/simulatorS.css">
 
@@ -85,7 +85,7 @@
 	.st21{fill:none;stroke:#E3000F;stroke-width:0.4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 </style>
 <g transform="translate(-36.9,-36.9)">
-					<defs><polygon id="SVGID_3_" points="36.9 36.9 36.9 275 416.7 275 504.6 275 530.1 275 530.1 36.9"/></defs>
+					<defs><polygon id="SVGID_3_" points="416.7 275 504.6 275 530.1 275 530.1 36.9 36.9 36.9 36.9 275"/></defs>
 					<clipPath id="SVGID_4_">
 						<use width="100%" height="100%" xlink:href="#SVGID_3_"/>
 					</clipPath>
@@ -178,7 +178,7 @@
 				<path class="st11" d="m130.7 258.5 1.5-7.8h.9l-1.5 7.8z"/>
 			</g>
 	</g>
-<path id="button4" class="st7" d="m300.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)"/><path id="button1" class="st4" d="m45.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8" onclick="buttonpressed(1)" onmouseout="buttonout(1)" onmouseover="buttonover(1)"/><path id="button5" class="st8" d="m385.5 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715" onclick="buttonpressed(5)" onmouseout="buttonout(5)" onmouseover="buttonover(5)"/><path id="button2" class="st9" d="m130.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96" onclick="buttonpressed(2)" onmouseout="buttonout(2)" onmouseover="buttonover(2)"/><path id="led2" class="st10" d="m243.7 64.4c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led3" class="st10" d="m265 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led1" class="st10" d="m222.5 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="button3" class="st12" d="m215.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800" onclick="buttonpressed(3)" onmouseout="buttonout(3)" onmouseover="buttonover(3)"/>
+<path id="button4" class="st7" d="m300.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#ff9119" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)" cursor="pointer"/><path id="button1" class="st4" d="m45.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#4fc0e8" onclick="buttonpressed(1)" cursor="pointer" onmouseout="buttonout(1)" onmouseover="buttonover(1)"/><path id="button5" class="st8" d="m385.5 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2c-17.3 0-31.2-14-31.2-31.2z" fill="#90c715" onclick="buttonpressed(5)" onmouseout="buttonout(5)" cursor="pointer" onmouseover="buttonover(5)"/><path id="button2" class="st9" d="m130.3 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f34f96" onclick="buttonpressed(2)" cursor="pointer" onmouseout="buttonout(2)" onmouseover="buttonover(2)"/><path id="led2" class="st10" d="m243.7 64.4c0-1.6 1.3-2.8 2.8-2.8 1.6 0 2.8 1.3 2.8 2.8 0 1.6-1.3 2.8-2.8 2.8-1.5.1-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led3" class="st10" d="m265 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="led1" class="st10" d="m222.5 64.4c0-1.6 1.3-2.8 2.8-2.8s2.8 1.3 2.8 2.8c0 1.6-1.3 2.8-2.8 2.8s-2.8-1.2-2.8-2.8z" fill="#fff"/><path id="button3" class="st12" d="m215.4 119c0-17.2 14-31.2 31.2-31.2s31.2 14 31.2 31.2-14 31.2-31.2 31.2-31.2-14-31.2-31.2z" fill="#f5a800" onclick="buttonpressed(3)" onmouseout="buttonout(3)" cursor="pointer" onmouseover="buttonover(3)"/>
 <g class="st19" transform="translate(0 -73.7)" display="none">
 	<g class="st20" display="inline">
 		<g id="CIRCLE_29_">
@@ -1131,6 +1131,11 @@
 		</g>
 	</g>
 </g>
+<text x="63.560577" y="132.59987" fill="#000000" font-family="sans-serif" font-size="40px" letter-spacing="0px" word-spacing="0px" style="line-height:1.25" onclick="buttonpressed(1)" onmouseout="buttonout(1)" onmouseover="buttonover(1)" cursor="pointer" xml:space="preserve"><tspan x="63.560577" y="132.59987">1</tspan></text>
+<text x="148.72659" y="132.86253" fill="#000000" font-family="sans-serif" font-size="40px" letter-spacing="0px" word-spacing="0px" style="line-height:1.25" onclick="buttonpressed(2)" onmouseout="buttonout(2)" onmouseover="buttonover(2)" cursor="pointer" xml:space="preserve"><tspan x="148.72659" y="132.86253">2</tspan></text>
+<text x="234.16867" y="132.86253" fill="#000000" font-family="sans-serif" font-size="40px" letter-spacing="0px" word-spacing="0px" style="line-height:1.25" onclick="buttonpressed(3)" onmouseout="buttonout(3)" onmouseover="buttonover(3)" cursor="pointer" xml:space="preserve"><tspan x="234.16867" y="132.86253">3</tspan></text>
+<text x="318.82928" y="134.42551" fill="#000000" font-family="sans-serif" font-size="40px" letter-spacing="0px" word-spacing="0px" style="line-height:1.25" onclick="buttonpressed(4)" onmouseout="buttonout(4)" onmouseover="buttonover(4)" cursor="pointer" xml:space="preserve"><tspan x="318.82928" y="134.42551">4</tspan></text>
+<text x="403.4899" y="133.64401" fill="#000000" font-family="sans-serif" font-size="40px" letter-spacing="0px" word-spacing="0px" style="line-height:1.25" onclick="buttonpressed(5)" onmouseout="buttonout(5)" onmouseover="buttonover(5)" cursor="pointer" xml:space="preserve"><tspan x="403.4899" y="133.64401">5</tspan></text>
 </svg>
 
 
@@ -1149,8 +1154,8 @@
  <g id="badge" transform="translate(-36.326 -29.035)"  onclick="badgepressed()" onmouseover="badgeover()" onmouseout="badgeout()" cursor="pointer">
   <g id="g875">
    <g>
-    <path id="badgeshadow" d="m36.661 46.372s1.0844 4.2324 3.8869 5.0034c6.3461 1.7457 15.579 3.1949 17.946 2.7291 1.4171-0.27883 2.8275-0.85806 3.8869-1.8194 1.5422-1.3995 3.1839-5.3755 3.1839-5.3755z" fill="#72afc5" stroke="#666" stroke-width=".12107px"/>
-    <path id="badgetop" d="m39.886 38.97c4.149-1.8721 5.9425-2.4267 13.232-4.7139 7.2895-2.2872 12.178 1.8625 13.025 7.3603 0.78162 5.0732-2.1904 11.009-8.973 10.751-6.7825-0.25805-11.016-1.5402-15.093-2.357-4.0768-0.81671-5.7892-2.4328-5.6649-5.665 0.0366-0.9522-0.67563-3.5034 3.4734-5.3755z" fill="#4fc0e8" stroke="#4d4d4d" stroke-width=".12107px"/>
+    <path id="badgeshadow" d="m36.661 46.372s1.0844 4.2324 3.8869 5.0034c6.3461 1.7457 15.579 3.1949 17.946 2.7291 1.4171-0.27883 2.8275-0.85806 3.8869-1.8194 1.5422-1.3995 3.1839-5.3755 3.1839-5.3755z" fill="#9bc0d5" stroke="#666" stroke-width=".12107px"/>
+    <path id="badgetop" d="m39.886 38.97c4.149-1.8721 5.9425-2.4267 13.232-4.7139 7.2895-2.2872 12.178 1.8625 13.025 7.3603 0.78162 5.0732-2.1904 11.009-8.973 10.751-6.7825-0.25805-11.016-1.5402-15.093-2.357-4.0768-0.81671-5.7892-2.4328-5.6649-5.665 0.0366-0.9522-0.67563-3.5034 3.4734-5.3755z" fill="#74a7c4" stroke="#4d4d4d" stroke-width=".12107px"/>
     <ellipse id="path830" cx="39.844" cy="44.18" rx="1.3232" ry="1.2819" fill="#fff" stroke="#4d4d4d" stroke-width=".13178"/>
    </g>
    <path id="onde1" d="m52.093 32.26s2.1873-0.93132 4.8055-0.93542c2.9448-0.0046 4.9522 1.0455 4.9522 1.0455" fill="none" stroke="#74a7c4" stroke-width=".36149"/>
