--- a/simulatorS.html
+++ b/simulatorS.html
@@ -57,7 +57,7 @@
 
 <div class="container">
 	<header>
-		<h1>Smilio Action Simulator</h1>
+		<h1>Smilio S Simulator</h1>
 		<div class="row">
 			<div class="col-sm-12" style="margin-bottom: 15px;">
 				This simulator aims to show the internal working of Smilio Action. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.<br /><br />
