--- a/simulatorS.html
+++ b/simulatorS.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Smilio Action Simulator</title>
+<title>Smilio S Simulator</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -60,7 +60,7 @@
 		<h1>Smilio S Simulator</h1>
 		<div class="row">
 			<div class="col-sm-12" style="margin-bottom: 15px;">
-				This simulator aims to show the internal working of Smilio Action. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.<br /><br />
+				This simulator aims to show the internal working of Smilio S. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.<br /><br />
 				4 buttons keyboard uses 1/2/3/4, 3 buttons keyboard uses 2/3/4, and dual question uses 1/2 & 4/5.
 			</div>
 		</header>
