--- a/simulatorS.html
+++ b/simulatorS.html
@@ -60,12 +60,12 @@
 		<h1>Smilio S Simulator</h1>
 		<div class="row">
 			<div class="col-sm-12" style="margin-bottom: 15px;">
-				This simulator aims to show the internal working of Smilio S. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.<br /><br />
-				4 buttons keyboard uses 1/2/3/4, 3 buttons keyboard uses 2/3/4, and dual question uses 1/2 & 4/5.
+				This simulator aims to show the internal working of Smilio S. POST Data is done with the format of Skiply's cloud API. We strongly recommend using Skiply Cloud API in production, especially for large deployments using multiple networks and/or mods. <a href="https://skiply-prod.appspot.com" rel="nofollow">See the API documentation</a>.
 			</div>
 		</header>
 	<div class="row">
 	<div class="col-sm-6">
+				4 buttons keyboard uses 1/2/3/4, 3 buttons keyboard uses 2/3/4, and dual question uses 1/2 & 4/5.
 <div class="svg-container">
 <svg version="1.1" viewBox="0 0 493.2 238.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <style type="text/css">
