--- a/simulatorS.html
+++ b/simulatorS.html
@@ -65,7 +65,7 @@
 		</header>
 	<div class="row">
 	<div class="col-sm-6">
-				4 buttons keyboard uses 1/2/3/4, 3 buttons keyboard uses 2/3/4, and dual question uses 1/2 & 4/5.
+				4 buttons keyboard uses 1/2/3/4, 3 buttons 2/3/4, and dual questions 1/2 & 4/5.
 <div class="svg-container">
 <svg version="1.1" viewBox="0 0 493.2 238.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <style type="text/css">
