--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="./simulator.html">Simulator</a></li>
+        <li><a href="./simulator.html">Simulator (Smilio A)</a></li>
+	<li><a href="./simulatorS.html">Simulator (Smilio S)</a></li>
         <li><a href="./configurator.html">Configurator</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
