--- a/simulator.html
+++ b/simulator.html
@@ -37,7 +37,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class='active'><a href="./simulator.html">Simulator <span class="sr-only">(current)</span></a></li>
+        <li class='active'><a href="./simulator.html">Simulator (Smilio A)<span class="sr-only">(current)</span></a></li>
+	<li><a href="./simulatorS.html">Simulator (Smilio S)</a></li>
         <li><a href="./configurator.html">Configurator</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
