--- a/configurator.html
+++ b/configurator.html
@@ -37,7 +37,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="./simulator.html">Simulator</a></li>
+        <li><a href="./simulator.html">Simulator (Smilio A)</a></li>
+       <li><a href="./simulatorS.html">Simulator (Smilio S)</a></li>
         <li class='active'><a href="./configurator.html">Configurator <span class="sr-only">(current)</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
