--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Smilio Action Integrator Tools</title>
+<title>Smilio Integrator Tools</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -60,23 +60,23 @@
 
 <div class="container">
 	<header>
-		<h1>Smilio Action Integrator Tools</h1>
+		<h1>Smilio Integrator Tools</h1>
 		</header>
 	<div class="row">
 			<div class="col-sm-12" style="margin-bottom:15px;">
-		Welcome to the Smilio Integrator Tools. Smilio Action is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN (dual mode).
+		Welcome to the Smilio Integrator Tools. Smilio is a collection of configurable connected buttons, communicating with both Sigfox and LoRaWAN (dual mode).
 		<br />
 		<br />
-		<img class="img-responsive" alt="Connected Buttons Smilio Action" src="./img/smilio-action.jpg" />
+		<img class="img-responsive" alt="Connected Buttons Smilio" src="./img/smilio-action.jpg" />
 	</div>
 </div>
 <div class="row" style="margin-bottom:15px;">
 	<div class="col-sm-6" style="margin-bottom:15px;">
-    The Simulator will help you to prepare your apps, even without having a Smilio Action Button in your hands.<br /><br />
+    The Simulator will help you to prepare your apps, even without having a Smilio Button in your hands.<br /><br />
     <a href="/simulator.html"><button type="button" class="btn btn-primary">Use the simulator</button></a>
 </div>
     	<div class="col-sm-6" style="margin-bottom:15px;">
-    The Configurator will help you to setup your Smilio Action with the correct Downlink for your App.<br /><br />
+    The Configurator will help you to setup your Smilio with the correct Downlink for your App.<br /><br />
     <a href="/configurator.html"><button type="button" class="btn btn-primary">Use the configurator</button></a>
   </div>
 </div>
