--- a/configurator.html
+++ b/configurator.html
@@ -138,8 +138,8 @@
 
 <div class="form-group">
   <label class="control-label" for="tpb">TPB</label>  
-  <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="3" max="60" required="">
-  <span class="help-block">Minimum time between 2 pushes, in seconds, min = 3 max = 60 (not used in code mode)</span>  
+  <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="1" max="60" required="">
+  <span class="help-block">Minimum time between 2 pushes, in seconds, min = 1 max = 60 (not used in code mode)</span>  
 </div>
 
 <div class="form-group">
@@ -163,8 +163,8 @@
 
 <div class="form-group">
   <label class="control-label" for="tpbq">TPBQ</label>  
-  <input id="tpbq" name="tpbq" type="number" value="5" min="1" max="60" class="form-control input-md" required="">
-  <span class="help-block">Minimum time between 2 magnetic detections, in seconds, max = 60</span>  
+  <input id="tpbq" name="tpbq" type="number" value="5" min="3" max="60" class="form-control input-md" required="">
+  <span class="help-block">Minimum time between 2 magnetic detections, in seconds,  min = 3 max = 60</span>  
 </div>
 </div>
 </div>
