--- a/configurator.html
+++ b/configurator.html
@@ -139,7 +139,7 @@
 <div class="form-group">
   <label class="control-label" for="tpb">TPB</label>  
   <input id="tpb" name="tpb" type="number" value="5" class="form-control input-md" min="1" max="60" required="">
-  <span class="help-block">Minimum time between 2 pushes, in seconds, min = 1 max = 60. Time to enter a code in code mode (min = 10)</span>  
+  <span class="help-block">Minimum time between 2 pushes, in seconds, min = 1 max = 60. Time to enter a code in code mode.</span>  
 </div>
 
 <div class="form-group">
